Fixes #14783: Make the Directive and Group sections foldable

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder.css
@@ -556,7 +556,10 @@ table .innerDetails li{
   padding: 5px 0 5px 0px;
   color: #333;
 }
-
+.foldedSection .section-title,
+.unfoldedSection .section-title {
+  cursor: pointer;
+}
 .portlet-header .ui-icon {
    float: right;
    cursor: pointer;
