--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-rules.css
@@ -137,7 +137,7 @@ label.rule-info + div{
 
 #ruleDirectives,
 #groupManagement{
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 h4.list-title{
@@ -151,6 +151,19 @@ h4.list-title{
 h4.list-title.except{
   border-bottom-color: #d43f3a;
 }
+
+.section-title > .badge{
+  position: relative;
+  top: -1px;
+  margin: 0 4px 0 2px;
+}
+.section-title > .badge.include{
+  background-color: #8fbb2c;
+}
+.section-title > .badge.exclude{
+  background-color: #d43f3a;
+}
+
 ul.applied-list > li {
   border: 1px solid #e5e5e5;
   padding: 10px;
