Fixes #15139: Make the focus on the generic method we just added

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -672,6 +672,19 @@ button.btn-save.saving span.saving{
   line-height: 22px;
   display: none;
 }
+.method.missingParameters:after{
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  transition-duration: .2s;
+  transition-property: box-shadow;
+  z-index: -1;
+  animation: pulse 1s forwards;
+}
 .missingParameters .requiredParameters{
   display: block !important;
 }
@@ -1152,6 +1165,32 @@ ul.list-unstyled > li.active .edit-method:after{
   0%   {color: #222D32;}
   100% {color: #646464;}
 }
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(199, 218, 252, .9);
+    box-shadow: 0 0 0 0 rgba(199, 218, 252, .9);
+  }
+  70% {
+      -moz-box-shadow: 0 0 4px 6px rgba(199, 218, 252, 0);
+      box-shadow: 0 0 4px 6px rgba(199, 218, 252, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(199, 218, 252, 0);
+      box-shadow: 0 0 0 0 rgba(199, 218, 252, 0);
+  }
+}
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(199, 218, 252, .9);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 4px 6px rgba(199, 218, 252, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(199, 218, 252, 0);
+  }
+}
+
 .no-padding-right {
   padding-right: 0px;
 }
