Fixes #15158: When we have a branding header, an annoying scrollbar appears on the technique editor page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
@@ -693,9 +693,15 @@ body{
   margin-left: -15px;
   height:calc(100vh - 95px);
 }
+#headerBar ~ .content-wrapper #editor-iframe{
+  height:calc(100vh - 125px);
+}
 @media (max-width:768px) {
   #editor-iframe{
     height:calc(100vh - 145px);
+  }
+  #headerBar ~ .content-wrapper #editor-iframe{
+    height:calc(100vh - 175px);
   }
 }
 
